# gvr-android-sdk

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  build.gradle  proguard-gvr.txt  project.config  settings.gradle
CardboardSample/: .gitignore  build.gradle
Yahpay-Intelligence/: whip112-logias
apks/: controller_emulator.apk
assets/: README.md
assets/6dof_controller/: dd6dof_controller.fbx
assets/controller/: ddcontroller.fbx
gradle/: LICENSE  README
gradle/wrapper/: gradle-wrapper.properties
libraries/: README.md  sdk-audio-1.10.0.aar  sdk-audio-1.10.0.pom  sdk-audio-1.100.0.aar  sdk-audio-1.100.0.pom  sdk-audio-1.101.0.aar  sdk-audio-1.101.0.pom  sdk-audio-1.120.0.aar  sdk-audio-1.120.0.pom  sdk-audio-1.130.0.aar  sdk-audio-1.130.0.pom  sdk-audio-1.140.0.aar  sdk-audio-1.140.0.pom  sdk-audio-1.150.0.aar  sdk-audio-1.150.0.pom  sdk-audio-1.160.0.aar  sdk-audio-1.160.0.pom  sdk-audio-1.170.0.aar  sdk-audio-1.170.0.pom  sdk-audio-1.180.0.aar  sdk-audio-1.180.0.pom  sdk-audio-1.190.0.pom  sdk-audio-1.20.0.aar  sdk-audio-1.20.0.pom  sdk-audio-1.30.0.aar  sdk-audio-1.30.0.pom  sdk-audio-1.40.0.aar  sdk-audio-1.40.0.pom  sdk-audio-1.60.0.aar  sdk-audio-1.60.0.pom  sdk-audio-1.60.1.aar  sdk-audio-1.60.1.pom  sdk-audio-1.70.0.aar  sdk-audio-1.70.0.pom  sdk-audio-1.80.0.aar  sdk-audio-1.80.0.pom  sdk-base-1.10.0.aar  sdk-base-1.10.0.pom  sdk-base-1.100.0.aar  sdk-base-1.100.0.pom  (+202 more)
libraries/audio/: audio.aar  build.gradle
libraries/base/: base.aar  build.gradle
libraries/common/: build.gradle  common.aar
libraries/commonwidget/: build.gradle  commonwidget.aar
libraries/controller/: build.gradle  controller.aar
libraries/core/: build.gradle  core.aar
libraries/native/: README.md
libraries/panowidget/: build.gradle  panowidget.aar
libraries/videowidget/: build.gradle  videowidget.aar
ndk-beta/apks/: controller_emulator.apk  controllerpaint.apk  treasurehunt.apk
ndk-beta/lib/: common_library.aar
samples/controllerclient/: build.gradle
samples/ndk-controllerpaint/: CMakeLists.txt  build.gradle
samples/ndk-controllerpaint/src/main/: AndroidManifest.xml
samples/ndk-controllerpaint/src/main/java/com/google/vr/ndk/samples/controllerpaint/: MainActivity.java
samples/ndk-controllerpaint/src/main/jni/: CMakeLists.txt  app_jni.cc  app_jni.h  demoapp.cc  demoapp.h  utils.cc  utils.h
samples/ndk-controllerpaint/src/main/res/values/: strings.xml
samples/ndk-hellovr/: CMakeLists.txt  build.gradle
samples/ndk-hellovr/src/main/: AndroidManifest.xml
samples/ndk-hellovr/src/main/java/com/google/vr/ndk/samples/hellovr/: HelloVrActivity.java
samples/ndk-hellovr/src/main/jni/: hello_vr_app.cc  hello_vr_app.h  hello_vr_jni.cc  hello_vr_shaders.h  util.cc  util.h  world_layout_data.h
samples/ndk-hellovr/src/main/res/values/: strings.xml
samples/ndk-hellovrbeta/: CMakeLists.txt  build.gradle
samples/ndk-helloxr/: CMakeLists.txt  build.gradle
samples/ndk-treasurehunt/: CMakeLists.txt  build.gradle
samples/sdk-controllerclient/: build.gradle
samples/sdk-hellovr/: build.gradle
samples/sdk-simplepanowidget/: build.gradle
samples/sdk-simplevideowidget/: build.gradle
samples/sdk-treasurehunt/: build.gradle
samples/sdk-video360/: build.gradle
samples/sdk-videoplayer/: build.gradle
samples/simplepanowidget/: build.gradle
samples/simplevideowidget/: build.gradle
samples/treasurehunt/: build.gradle
sdk.mpm/versions/: packagename
(+191 files in other folders)
